--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
+<meta charset="UTF-8">
 <html>
   <head>
-    <title>Angular App</title>
+    <title>StatMess</title>
   </head>
   <body>
   <my-app></my-app>
