--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <meta charset="UTF-8">
 <html>
   <head>
-    <title>StatMess</title>
+    <title>SightMess</title>
   </head>
   <body>
   <my-app></my-app>
