--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>SightMess</title>
+    <link rel="icon" type="image/x-icon" href="/assets/img/logoSightmess.ico">
   </head>
   <body>
   <my-app></my-app>
