--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>SightMess</title>
-    <link rel="icon" type="image/x-icon" href="/assets/img/logoSightmess.ico">
+    <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <meta name="description" content="Découvrez toutes les statistiques que vous avez toujours voulu savoir si votre utilisation de messenger, vos conversations et ce que votre activité sur messenger cache sur vous... !" /> 
   </head>
