--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,10 @@
 <meta charset="UTF-8">
-<html lang="fr">
+<html>
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142066952-1"></script> 
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-142066952-1');
-    </script>
-    <!-- Global site tag (gtag.js) - Google Adsense -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({
-        google_ad_client: "ca-pub-4314127717331402",
-        enable_page_level_ads: true
-      });
-    </script>
     <title>SightMess</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <meta charset="utf-8" />
-    <meta name="description" content="Découvrez toutes les statistiques que vous avez toujours voulu savoir si votre utilisation de messenger, vos conversations et ce que votre activité sur messenger cache sur vous... !" /> 
+    <meta name="description" content="Découvrez toutes les statistiques que vous avez toujours voulu savoir sur votre utilisation de messenger, vos conversations et ce que votre activité sur messenger cache sur vous... !" /> 
   </head>
   <body>
   <my-app></my-app>
