--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,13 @@
 <meta charset="UTF-8">
 <html>
   <head>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-4314127717331402",
+          enable_page_level_ads: true
+        });
+      </script>
     <base href="/">
     <title>SightMess</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
