--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
-<html>
+<html lang="fr">
   <head>
           <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142066952-1"></script>
@@ -15,7 +15,7 @@
     <title>SightMess</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <meta name="description" content="Découvrez toutes les statistiques que vous avez toujours voulu savoir sur votre utilisation de messenger, vos conversations et ce que votre activité sur messenger cache sur vous... !" /> 
+    <meta name="description" content="Analysez l'intégralité de vos messages Facebook: découvrez votre profil Messenger, analysez vos conversations en détail et dans leur globalité et bien plus encore..." /> 
   </head>
   <body>
   <my-app></my-app>
