--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
       gtag('config', 'UA-142066952-1');
     </script>
 
+    <script type="text/javascript"> var infolinks_pid = 3197582; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+
+
     <base href="/">
     <title>SightMess</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
