--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,16 @@
 <meta charset="UTF-8">
+<!doctype html>
 <html lang="fr">
   <head>
+
+    <!-- InfoLinks-->
+
+    <script type="text/javascript">
+      var infolinks_pid = 3197582;
+      var infolinks_wsid = 0;
+    </script>
+    <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
+    
           <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142066952-1"></script>
     <script>
@@ -10,8 +20,6 @@
 
       gtag('config', 'UA-142066952-1');
     </script>
-
-    <script type="text/javascript"> var infolinks_pid = 3197582; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 
 
     <base href="/">
