Manière officielle d'intégrer /home

--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,7 @@
     <title>SightMess</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <meta name="description" content="Analysez l'intégralité de vos messages Facebook: découvrez votre profil Messenger, analysez vos conversations en détail et dans leur globalité et bien plus encore..." /> 
+    <meta name="description" content="Analysez vos messages Facebook: découvrez votre profil Messenger, analysez vos conversations en détail et dans leur globalité et bien plus encore..." /> 
   </head>
   <body>
   <my-app></my-app>
