Test Open Graph

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,17 @@
 <meta charset="UTF-8">
 <!doctype html>
-<html lang="fr">
+<html lang="fr" xmlns:og="http://ogp.me/ns#">
   <head>
+
+    <!-- Balises Open Graph pour Réseaux Sociaux & SEO -->
+
+    <title>Sightmess</title>
+    <meta property="og:title" content="Sightmess" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://sightmess.com/" />
+    <meta property="og:image" content="https://zupimages.net/up/19/31/f91x.png" />
+    <meta property="og:description" content="Découvrez enfin une analyse complète de vos conversations Messenger et de votre profil utilisateur" />
+
 
     <!-- The Moneytiser -->
 
