--- a/src/index.html
+++ b/src/index.html
@@ -178,6 +178,28 @@
     <meta name="description" content="Analysez vos messages Facebook: découvrez votre profil Messenger, analysez vos conversations en détail et dans leur globalité et bien plus encore..." /> 
   </head>
   <body>
+
+        <!-- Facebook SDK for developers -->
+
+        <script>
+                window.fbAsyncInit = function() {
+                  FB.init({
+                    appId            : '368024827166544',
+                    autoLogAppEvents : true,
+                    xfbml            : true,
+                    version          : 'v4.0'
+                  });
+                };
+              
+                (function(d, s, id){
+                   var js, fjs = d.getElementsByTagName(s)[0];
+                   if (d.getElementById(id)) {return;}
+                   js = d.createElement(s); js.id = id;
+                   js.src = "https://connect.facebook.net/en_US/sdk.js";
+                   fjs.parentNode.insertBefore(js, fjs);
+                 }(document, 'script', 'facebook-jssdk'));
+              </script>
+
   <my-app></my-app>
 
   </body>
