--- a/src/index.html
+++ b/src/index.html
@@ -189,13 +189,17 @@
                     xfbml            : true,
                     version          : 'v4.0'
                   });
-                };
+                  FB.ui({
+                     method: 'share',
+                     href: 'http://sightmess.com/'
+                     }, function(response){});
+                  };
               
                 (function(d, s, id){
                    var js, fjs = d.getElementsByTagName(s)[0];
                    if (d.getElementById(id)) {return;}
                    js = d.createElement(s); js.id = id;
-                   js.src = "https://connect.facebook.net/en_US/sdk.js";
+                   js.src = "https://connect.facebook.net/fr_FR/sdk.js";
                    fjs.parentNode.insertBefore(js, fjs);
                  }(document, 'script', 'facebook-jssdk'));
         </script>
