Test Send in mesenger

--- a/src/index.html
+++ b/src/index.html
@@ -190,10 +190,10 @@
                     version          : 'v4.0'
                   });
                   FB.ui({
-                     method: 'share',
-                     href: 'http://sightmess.com/'
-                     }, function(response){});
-                  };
+                     method: 'send',
+                     link: 'http://sightmess.com/',
+                     app_id: '368024827166544'
+                    });
               
                 (function(d, s, id){
                    var js, fjs = d.getElementsByTagName(s)[0];
