--- a/src/index.html
+++ b/src/index.html
@@ -190,11 +190,10 @@
                     version          : 'v4.0'
                   });
                   FB.ui({
-                     method: 'send',
-                     link: 'http://sightmess.com/',
-                     app_id: '368024827166544'
-                    });
-                };
+                     method: 'share',
+                     href: 'http://sightmess.com/'
+                     }, function(response){});
+                  };
                 
               
                 (function(d, s, id){
