Messenger send for pc

--- a/src/index.html
+++ b/src/index.html
@@ -190,8 +190,9 @@
                     version          : 'v4.0'
                   });
                   FB.ui({
-                     method: 'share',
-                     href: 'http://sightmess.com/'
+                    method: 'send',
+                    link: 'http://sightmess.com/',
+                    app_id: '368024827166544'
                      }, function(response){});
                   };
                 
