--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="http://sightmess.com/" />
     <meta property="og:image" content="https://zupimages.net/up/19/31/f91x.png" />
     <meta property="og:description" content="Découvrez enfin une analyse complète de vos conversations Messenger et de votre profil utilisateur" />
+    <meta property="fb:app_id" content="368024827166544" />
 
 
     <!-- The Moneytiser -->
