Open Graph modif txt

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://sightmess.com/" />
     <meta property="og:image" content="https://zupimages.net/up/19/31/f91x.png" />
-    <meta property="og:description" content="Découvrez enfin une analyse complète de vos conversations Messenger et de votre profil utilisateur" />
+    <meta property="og:description" content="Découvrez enfin une analyse complète de vos conversations Messenger et de votre profil utilisateur." />
     <meta property="fb:app_id" content="368024827166544" />
 
 
