Photo Open Graph + tests href

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Sightmess" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://sightmess.com/" />
-    <meta property="og:image" content="https://zupimages.net/up/19/31/f91x.png" />
+    <meta property="og:image" content="http://sightmess.com/assets/img/cover_facebook.png" />
     <meta property="og:description" content="Découvrez enfin une analyse complète de vos conversations Messenger et de votre profil utilisateur." />
     <meta property="fb:app_id" content="368024827166544" />
 
@@ -182,6 +182,7 @@
 
         <!-- Facebook SDK for developers -->
 
+        <!--
         <script>
                 window.fbAsyncInit = function() {
                   FB.init({
@@ -210,6 +211,7 @@
                    fjs.parentNode.insertBefore(js, fjs);
                  }(document, 'script', 'facebook-jssdk'));
         </script>
+        -->
 
          <!-- Partie SEND IN MESSENGER for MOBILE
 
