--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
     <title>SightMess</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/logoSightmess.ico">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <meta name="description" content="Analysez vos messages Facebook: découvrez votre profil Messenger, analysez vos conversations en détail et dans leur globalité et bien plus encore..." /> 
+    <meta name="description" content="Lancez l'analyse de vos messages Facebook: découvrez votre profil Messenger, analysez vos conversations, dévoilez vos caractéristiques et celles de vos contacts." /> 
   </head>
   <body>
 
